
===================
Restlet changes log  
===================

@version-full@ (@release-date@)
 - Fixed potential NPE exceptions in the equals() methods of many metadata classes.
 - When build its pattern, the HostRouter now adds case insensitive flags for scheme names and domain names, strictly following the URI specification. Bug reported by Jim.
 - Added new FAQ entry on "What are the underlying concepts?" and reorganized the questions a little.

1.0 beta 16 (2006-06-30)
 - Renamed attachPath() to attachRouter() in RouterBuilder.
 - Updated all tutorial code snippets (some were slightly outdated)
 - Removed dependency of API on NRE in ReferenceList and RestletContainer.
 - Fixed bug in TunnelFilter (see issue 68). Reported by A.J. Barnes.
 - Restructured code source to split the "source/main" directory into "source/api" and "source/core".
 - Split NRE Javadocs into NRE Core Javadocs and NRE Extensions Javadocs.

1.0 beta 15 (2006-06-26)
 - Updated Jetty 6 to version beta 17.
 - Updated Apache FileUpload extension to version 1.1.1.
 - Fixed encoding name in JdbcClient sample XML document. Reported by Thierry Boileau.
 - Added new FileRepresentation constructor accepting a File instance.
 - Improved ByteUtils.write() methods for streams by automatically buffering output streams if necessary.
 - Removed the unecessary buffering of the input stream in ByteUtils.write(). We don't use the mark and set features.
 - Fixed AbstractRestlet which was not reporting the proper error when non standard Method instances were called but not handled.
 - Added CONTEXT and FILE protocols to Protocols enumeration.
 - Added com.noelios.restlet.data.FileReference.
 - Added org.restlet.data.ReferenceList to handle list of references, supporting the "text/uri-list" representations.
 - Renamed com.noelios.restlet.impl.HttpServerCallImpl to HttpServerCall.
 - Renamed "initParameters" into "properties" for Component interface and related classes.